<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nm.evaluatingnullcheckers.benchmarks</groupId>
	<artifactId>evaluating_null_checkers</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<url>http://maven.apache.org</url>


	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<!-- These properties will be set by the Maven Dependency plugin -->
		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<benchmark>nm/evaluatingnullcheckers/benchmarks/BenchmarkOne.java</benchmark>
		<!-- Default infer location, should be changed using -Dinferlocation=location-->
		<inferlocation>/usr/local/bin/infer</inferlocation>
	</properties>


	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.12.7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.shared/maven-invoker -->
		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-invoker</artifactId>
			<version>3.2.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.2</version>
		</dependency>

		<!-- Annotations from the Checker Framework: nullness, interning, locking, 
			... -->
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.21.3</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>javac</artifactId>
			<version>9+181-r4173-1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker</artifactId>
			<version>3.21.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core -->
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>error_prone_core</artifactId>
			<version>2.9.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		<groupId>nm.precompiledclasses</groupId>
		<artifactId>precompiledclasses</artifactId>
		<version>1.0</version>
		<scope>system</scope>
		<systemPath>${project.basedir}/src/main/resources/precompiledclasses-1.0.jar</systemPath>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M6</version>
			</plugin>
			<plugin>
				<!-- This plugin will set properties values using dependency information -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>java11compile</id>
			<activation>
				<jdk>1.11</jdk>
				<property>
					<name>javaver</name>
					<value>11</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<debug>true</debug>
							<source>11</source>
							<target>11</target>
							<includes>
								<include>${benchmark}</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>compiletools</id>
			<activation>
				<property>
					<name>compiletools</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<debug>true</debug>
							<source>11</source>
							<target>11</target>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- CHECKERFRAMEWORKSTART -->

		<profile>
			<id>checkerframework</id>
			<activation>
				<property>
					<name>checkerframework</name>
					<value>true</value>
				</property>
				<jdk>[1.8,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
							<debug>true</debug>
							<compilerArguments>
								<Xmaxerrs>10000</Xmaxerrs>
								<Xmaxwarns>10000</Xmaxwarns>
							</compilerArguments>
							<annotationProcessorPaths>
								<path>
									<groupId>org.checkerframework</groupId>
									<artifactId>checker</artifactId>
									<version>3.21.3</version>
								</path>
							</annotationProcessorPaths>
							<annotationProcessors>
								<!-- Add all the checkers you want to enable here -->
								<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
							</annotationProcessors>
							<compilerArgs>
								<arg>-Awarns</arg>
								<!-- -Awarns turns type-checking errors into warnings. -->
							</compilerArgs>
							<includes>
								<include>${benchmark}</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>checkerframework-jdk9orlater</id>
			<activation>
				<jdk>[9,)</jdk>
				<property>
					<name>checkerframework</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<debug>true</debug>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
								<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<properties>
				<!-- Needed for animal-sniffer-maven-plugin version 1.19 (version 1.20 
					is fixed). -->
				<animal.sniffer.skip>true</animal.sniffer.skip>
			</properties>
		</profile>

		<!-- NULLAWAYSTART -->


		<profile>
			<id>nullawayjava11</id>
			<activation>
				<jdk>11</jdk>
				<property>
					<name>nullaway</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>11</source>
							<target>11</target>
							<debug>true</debug>
							<showWarnings>true</showWarnings>
							<compilerArgs>
								<arg>-XDcompilePolicy=simple</arg>
								<arg>-Xplugin:ErrorProne -XepDisableAllChecks -Xep:NullAway:ERROR -XepOpt:NullAway:AnnotatedPackages=nm.evaluatingnullcheckers.benchmarks -XepAllErrorsAsWarnings</arg>
							</compilerArgs>
							<annotationProcessorPaths>
								<path>
									<groupId>com.google.errorprone</groupId>
									<artifactId>error_prone_core</artifactId>
									<version>2.9.0</version>
								</path>
								<path>
									<groupId>com.uber.nullaway</groupId>
									<artifactId>nullaway</artifactId>
									<version>0.9.6</version>
								</path>
							</annotationProcessorPaths>
							<includes>
								<include>${benchmark}</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>infer-capture</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.0</version>
						<configuration>
							<compilerId>javac</compilerId>
							<forceJavacCompilerUse>true</forceJavacCompilerUse>
							<fork>true</fork>
							<includes>
								<include>${benchmark}</include>
							</includes>
							<executable>${inferlocation}</executable>

						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>


</project>